# avaliacao1edd

./: CMakeLists.txt  Quadrado.c  Quadrado.h  README.md  item.c  item.h  lista_encadeada.c  lista_encadeada.h  lista_ordenada.c  lista_ordenada.h  lista_sequencial.c  lista_sequencial.h  main.c
