cmake_minimum_required(VERSION 3.20)
project(Avaliacao1_RhuanLucasBarbosaFernandes C)

set(CMAKE_C_STANDARD 99)

add_executable(Avaliacao1_RhuanLucasBarbosaFernandes main.c Quadrado.c Quadrado.h item.c item.h lista_sequencial.c lista_sequencial.h lista_encadeada.c lista_encadeada.h lista_ordenada.c lista_ordenada.h)
